[project]
name = "rl-explainer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qwen-vl-utils (>=0.0.11,<0.0.12)",
    "torchvision (>=0.22.1,<0.23.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "accelerate (>=1.8.1,<2.0.0)",
    "google-genai (>=1.21.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ale-py (>=0.11.1,<0.12.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "stable-baselines3[extra] (>=2.6.0,<3.0.0)",
    "huggingface-sb3 (>=3.0,<4.0)",
    "gym (>=0.26.2,<0.27.0)",
    "shimmy (>=2.0.0,<3.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
